--- a/index.html
+++ b/index.html
@@ -106,6 +106,12 @@
                 <p class="text-description-project">Futuramente, irei aplicar o Java, com foco em criar o backend.</p>
             </div>
             <div class="stopwatch">
+                <a href="https://github.com/Diogomc/calculator-pure-java#readme" target="_blank"><img class="project-image-stopwatch gif" src="assets/calc-img.jpg"></a>
+                <h4 class="title-description-project">Calculator</h4>
+                <img class="language-projects" src="/assets/java.png">
+                <p class="text-description-project">Neste projeto, estou desenvolvendo uma calculadora com o Java puro, porém futuramente quero atualiza-la com uma interface gráfica e elementos do Spring Boot.</p>
+            </div>
+            <div class="stopwatch">
                 <a href="https://stopwatch-five-psi.vercel.app/" target="_blank"><img class="project-image-stopwatch"
                         src="assets/stopwatch.png"></a>
                 <h4 class="title-description-project">Stopwatch</h4>
@@ -116,14 +122,7 @@
                 <p class="text-description-project">Entretanto, este projeto foi de suma importância em meu
                     desenvolvimento, pois utilizei os conceitos básicos de data e hora que o javascript proporciona.</p>
             </div>
-            <div class="stopwatch">
-                <a href=""><img class="project-image-stopwatch gif" src="assets/loading.gif"></a>
-                <h4 class="title-description-project">Loading</h4>
-                <img class="language-projects" src="/assets/java.png">
-                <img class="language-projects" src="/assets/js.png">
-                <img class="language-projects" src="/assets/html.png">
-                <img class="language-projects" src="/assets/css.png">
-            </div>
+            
         </section>
         <section class="contact">
         </section>
